<resources>
    <string name="app_name">Onglets</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="vue1">1ère vue</string>
    <string name="vue2">2ème vue</string>
    <string name="fiche">Fiche Terrain</string>
    <string name="map">Map</string>
    <string name="Poids">Poids</string>
    <string name="Taille">Taille</string>
    <string name="Poids_2points">Poids :</string>
    <string name="Taille_2points">Taille :</string>
    <string name="metre">Mètre</string>
    <string name="cm">Centimètre</string>
    <string name="megafonction">Méga fonction !</string>
    <string name="calculImc">Calculer l\'IMC</string>
    <string name="RAZ">RAZ</string>
    <string name="resultat">Résultat :</string>
    <string name="texteResultat">Vous devez cliquer sur le bouton \"Calculer IMC\" pour obtenir un résultat</string>
    <string name="boutton">boutton</string>
    <string name="mes2">message 2</string>
    <string name="mes3">message 3</string>
    <string name="mes1">message 1</string>
    <string name="id">id</string>
    <string name="prenom">Prenom</string>
    <string name="couleur">Couleur</string>
    <string name="age">Age</string>
    <string name="idauteur">idAuteur</string>
    <string name="date">date</string>
    <string name="mur">mur</string>
    <string name="deno">Deno</string>
    <string name="mur1">mur1</string>
    <string name="mur2">mur2</string>
    <string name="mur3">mur3</string>
    <string name="auteur">Enqueteur</string>
    <string name="Carte">Carte</string>
    <string name="adresse">Adresse</string>
    <string name="reference_cadastrale">REFERENCE_CADASTRALE</string>
    <string name="coordX">COORDX</string>
    <string name="coordY">coordY</string>
    <string name="motdirecte">MOTDIRECTE</string>
    <string name="parcelle_unique">Parcelle Unique</string>
    <string name="parcelle_multiple">Parcelles Multiple</string>
    <string name="recherche_pr_cise">Recherche Précise</string>
    <string name="recherche_largie">Recherche Elargie</string>
</resources>
