<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        tools:context="com.example.guillaume.onglets.MainActivity"
        tools:layout_editor_absoluteY="89dp">


        <TextView
            android:id="@+id/message2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="108dp"
            android:text="@string/mes1"
            android:visibility="invisible"
            app:layout_constraintBaseline_toBaselineOf="@+id/message4"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/message3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="199dp"
            android:layout_marginStart="16dp"
            android:text="@string/mes2"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/message4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="30dp"
            android:text="@string/mes3"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/message2"
            app:layout_constraintTop_toBottomOf="@+id/message3" />

        <EditText
            android:id="@+id/et1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="532dp"
            android:layout_marginTop="76dp"
            android:hint="recherche documentation"
            android:inputType="text"
            android:outlineProvider="bounds"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1" />


        <ListView
            android:id="@+id/listDoc"
            android:layout_width="351dp"
            android:layout_height="384dp"
            android:layout_marginStart="472dp"
            android:layout_marginTop="232dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="219dp"
            android:layout_height="46dp"
            android:layout_marginStart="532dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/windowBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/navigation" />

        <TextView
            android:id="@+id/message1"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginStart="620dp"
            android:layout_marginTop="204dp"
            android:hint="Résultat recherche"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/doc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="568dp"
            android:layout_marginTop="128dp"
            android:text="Rechercher doc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/navigation" />

    </android.support.constraint.ConstraintLayout>
</HorizontalScrollView>
